<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingConstraints"
    android:orientation="vertical"
    android:background="#ECEAEA">
    <vnu.uet.boatsafe.ui.widget.UiToolbarHome
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/cvIntroduce"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/size_20dp"
                android:layout_marginLeft="@dimen/size_20dp"
                android:layout_marginRight="@dimen/size_20dp"
                app:cardCornerRadius="@dimen/size_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_15dp">
                    <TextView
                        android:id="@+id/tvIntroduce"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="@android:color/black"
                        android:text="@string/title_introduce_app"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_15dp"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="@android:color/black"
                        android:text="UET Team"
                        app:layout_constraintTop_toBottomOf="@+id/tvIntroduce"
                        app:layout_constraintRight_toRightOf="parent"
                        />
                </android.support.constraint.ConstraintLayout>


            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/btnSendEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_20dp"
                android:layout_marginLeft="@dimen/size_20dp"
                android:layout_marginTop="@dimen/size_20dp"
                android:layout_marginBottom="@dimen/size_20dp"
                app:layout_constraintTop_toBottomOf="@+id/cvIntroduce"
                android:background="@drawable/bg_button_primary"
                android:text="@string/title_support_developer"
                android:textColor="@android:color/white"
                />

            <TextView
                android:id="@+id/tvSetup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/title_set_up"
                app:layout_constraintTop_toBottomOf="@+id/btnSendEmail"
                android:layout_marginTop="@dimen/size_20dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="@+id/tvSetup"
                app:layout_constraintBottom_toBottomOf="@+id/tvSetup"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tvSetup"
                android:layout_marginLeft="@dimen/size_10dp"
                android:layout_marginRight="@dimen/size_10dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="@+id/tvSetup"
                app:layout_constraintBottom_toBottomOf="@+id/tvSetup"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/tvSetup"
                android:layout_marginLeft="@dimen/size_10dp"
                android:layout_marginRight="@dimen/size_10dp"/>

            <Button
                android:id="@+id/btnSettingLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_70dp"
                android:layout_marginLeft="@dimen/size_70dp"
                android:layout_marginTop="@dimen/size_20dp"
                android:layout_marginBottom="@dimen/size_20dp"
                app:layout_constraintTop_toBottomOf="@+id/tvSetup"
                android:background="@drawable/bg_button_primary"
                android:text="@string/title_language"
                android:textColor="@android:color/white"
                />

            <Button
                android:id="@+id/btnSettingCollision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_70dp"
                android:layout_marginLeft="@dimen/size_70dp"
                android:layout_marginTop="@dimen/size_20dp"
                android:layout_marginBottom="@dimen/size_20dp"
                app:layout_constraintTop_toBottomOf="@+id/btnSettingLanguage"
                android:background="@drawable/bg_button_primary"
                android:text="@string/title_collision_warning"
                android:textColor="@android:color/white"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_150dp"
                app:layout_constraintTop_toBottomOf="@+id/btnSettingCollision"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>